fix spacing

--- a/webapp/channels/src/sass/layout/_headers.scss
+++ b/webapp/channels/src/sass/layout/_headers.scss
@@ -238,7 +238,7 @@
     .shared-channel-icon {
         width: 16px;
         height: 16px;
-        margin: 0 4px;
+        margin: 0 2px;
         font-size: 16px;
         line-height: 16px;
 
